--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ input[type='number']::-webkit-outer-spin-button {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
-	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 }
@@ -142,6 +141,16 @@ input[type='number']::-webkit-outer-spin-button {
 	background-repeat: no-repeat;
 	background-size: cover;
 	z-index: 5;
+}
+
+.header__bg-layout:after {
+	content: '\A';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.5);
 }
 
 .header__inner {
@@ -354,6 +363,17 @@ input[type='number']::-webkit-outer-spin-button {
 	background-position: 100% 0;
 	background-repeat: no-repeat;
 	background-size: cover;
+	position: relative;
+}
+
+.middle-title:after {
+	content: '\A';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.5);
 }
 
 .middle-title__inner {
@@ -363,6 +383,8 @@ input[type='number']::-webkit-outer-spin-button {
 	justify-content: space-between;
 	-ms-flex-align: center;
 	align-items: center;
+	position: relative;
+	z-index: 2;
 }
 
 .middle-title__text {
@@ -414,8 +436,8 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .video-block__frame {
-	width: 100%;
-	height: calc(382.838px);
+	width: 95%;
+	height: calc(363.944px);
 }
 
 .coach-block {
@@ -673,12 +695,24 @@ input[type='number']::-webkit-outer-spin-button {
 	background-size: cover;
 }
 
+.footer:after {
+	content: '\A';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.5);
+}
+
 .footer__inner {
 	display: grid;
 	grid-template-columns: 426px 570px;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
 	padding-bottom: 120px;
+	position: relative;
+	z-index: 2;
 }
 
 .footer__tarif-wrap {
