--- a/less/components/footer.less
+++ b/less/components/footer.less
@@ -5,12 +5,26 @@
     background-position: 100% 0;
     background-repeat: no-repeat;
     background-size: cover;
+
+    &:after {
+        content: '\A';
+        position: absolute;
+        width: 100%; 
+        height:100%;
+        top:0; 
+        left:0;
+        background: rgba(0,0,0,.5);
+    }
+
     &__inner {
         display: grid;
         grid-template-columns: 426px 570px;
         justify-content: space-between;
         padding-bottom: 120px;
+        position: relative;
+        z-index: 2;
     }
+    
     &__tarif-wrap {
         margin-top: 60px;
     }
